--- a/index.html
+++ b/index.html
@@ -1,93 +1,255 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Die Töchter der Mutter - Shub-Niggurath Kult</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Livia Stockmaier - Künstlerische Visionen</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary-color: #f4e9d3;
+            --accent-color: #a63c3c;
+            --dark-bg: #1a1a1a;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Raleway', sans-serif;
+            background-color: var(--dark-bg);
+            color: var(--primary-color);
+            overflow-x: hidden;
+        }
+
+        /* Navigation */
+        .nav-wrapper {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            padding: 1.5rem 5%;
+            mix-blend-mode: difference;
+        }
+
+        .main-nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.1rem;
+            position: relative;
+            transition: 0.3s;
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: var(--accent-color);
+            transition: 0.3s;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+        }
+
+        /* Hero Section */
+        .hero {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-content {
+            text-align: center;
+            z-index: 1;
+        }
+
+        .hero h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 5rem;
+            margin-bottom: 1rem;
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 1s forwards;
+        }
+
+        /* Gallery Grid */
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 1rem;
+            padding: 5%;
+            position: relative;
+        }
+
+        .gallery-item {
+            position: relative;
+            overflow: hidden;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        }
+
+        .gallery-item:hover {
+            transform: scale(1.03);
+        }
+
+        /* Dynamic Overlay Effect */
+        .gallery-item::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, rgba(166, 60, 60, 0.3), transparent);
+            opacity: 0;
+            transition: 0.5s;
+        }
+
+        .gallery-item:hover::after {
+            opacity: 1;
+        }
+
+        /* Animations */
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Section Styling */
+        section {
+            padding: 8rem 5%;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+        }
+
+        /* Parallax Scrolling Effect */
+        .parallax-bg {
+            position: absolute;
+            width: 110%;
+            height: 110%;
+            top: -5%;
+            left: -5%;
+            background-size: cover;
+            background-position: center;
+            will-change: transform;
+        }
+
+        /* Mobile Optimization */
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 3rem;
+            }
+
+            .gallery-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .nav-links {
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
-  <!-- Header -->
-  <header id="header">
-    <div class="logo">
-      <img src="logo.png" alt="Shub-Niggurath Logo">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#about">Über uns</a></li>
-        <li><a href="#beliefs">Glauben</a></li>
-        <li><a href="#rituals">Rituale</a></li>
-        <li><a href="#membership">Mitgliedschaft</a></li>
-        <li><a href="#events">Veranstaltungen</a></li>
-        <li><a href="#contact">Kontakt</a></li>
-      </ul>
+    <nav class="nav-wrapper">
+        <div class="main-nav">
+            <h1>LIVIASART</h1>
+            <div class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
     </nav>
-  </header>
 
-  <!-- Startseite / Hero Image -->
-  <section id="hero" class="hero">
-    <div class="hero-content">
-      <h1>Erwecke die alte Macht. Schließe dich den Töchtern der Mutter an.</h1>
-      <a href="#about" class="cta-button">Erfahre mehr</a>
-      <a href="#membership" class="cta-button">Mitglied werden</a>
-    </div>
-  </section>
+    <section id="home" class="hero">
+        <div class="parallax-bg"></div>
+        <div class="hero-content">
+            <h1>Livia Stockmaier</h1>
+            <p>Contemporary Art & Visionary Creations</p>
+        </div>
+    </section>
 
-  <!-- Über uns -->
-  <section id="about" class="section">
-    <h2>Über uns</h2>
-    <p>Die Töchter der Mutter erheben sich, um die unterdrückte Macht wiederzuerlangen. Sei Teil einer Gemeinschaft, die dich stärkt und verbindet.</p>
-    <p>Unser Kult nutzt die alten Rituale von Shub-Niggurath, um Frauen zu ermächtigen und die patriarchale Unterdrückung zu bekämpfen.</p>
-  </section>
+    <section id="gallery">
+        <div class="gallery-grid">
+            <!-- Platzhalter für 9 Bilder -->
+            <div class="gallery-item"><img src="https://source.unsplash.com/random/600x800?art1" alt="Artwork 1"></div>
+            <div class="gallery-item"><img src="https://source.unsplash.com/random/600x800?art2" alt="Artwork 2"></div>
+            <div class="gallery-item"><img src="https://source.unsplash.com/random/600x800?art3" alt="Artwork 3"></div>
+            <!-- Weitere Items hier einfügen -->
+        </div>
+    </section>
 
-  <!-- Glauben -->
-  <section id="beliefs" class="section">
-    <h2>Glauben</h2>
-    <p>Shub-Niggurath symbolisiert die weibliche Fruchtbarkeit und die mächtigen Kräfte der Natur. Unsere Rituale verbinden diese Kraft mit modernen feministischen Idealen.</p>
-  </section>
+    <script>
+        // Parallax Effect
+        document.addEventListener('mousemove', (e) => {
+            const parallax = document.querySelector('.parallax-bg');
+            const speed = 0.02;
+            const x = (window.innerWidth - e.pageX * speed) / 100;
+            const y = (window.innerHeight - e.pageY * speed) / 100;
+            parallax.style.transform = `translate(${x}px, ${y}px)`;
+        });
 
-  <!-- Rituale -->
-  <section id="rituals" class="section">
-    <h2>Rituale</h2>
-    <p>Unsere Rituale sind der Weg, um die Macht von Shub-Niggurath zu erwecken und zu entfalten. Sie helfen uns, unsere wahre Stärke zu finden und das Patriarchat zu bekämpfen.</p>
-    <a href="#events" class="cta-button">An kommende Rituale teilnehmen</a>
-  </section>
+        // Smooth Scroll
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
 
-  <!-- Mitgliedschaft -->
-  <section id="membership" class="section">
-    <h2>Mitgliedschaft</h2>
-    <p>Schließe dich uns an und werde ein Teil der Gemeinschaft. Erhalte Zugang zu geheimen Ritualen und exklusivem Wissen.</p>
-    <a href="signup.html" class="cta-button">Jetzt Mitglied werden</a>
-  </section>
+        // Intersection Observer für Animationen
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = 1;
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        });
 
-  <!-- Veranstaltungen -->
-  <section id="events" class="section">
-    <h2>Veranstaltungen</h2>
-    <p>Sei dabei, wenn wir die Macht von Shub-Niggurath erwecken. Alle bevorstehenden Rituale und Treffen findest du hier.</p>
-    <ul>
-      <li>Ritual zur Anrufung von Shub-Niggurath - 25. Dezember</li>
-      <li>Hexen-Sabbat - 1. Januar</li>
-    </ul>
-  </section>
-
-  <!-- Kontakt -->
-  <section id="contact" class="section">
-    <h2>Kontakt</h2>
-    <p>Hast du Fragen? Kontaktiere uns über das Formular oder folge uns auf unseren sozialen Medien.</p>
-    <form action="submit_form.php" method="POST">
-      <input type="text" name="name" placeholder="Dein Name" required>
-      <input type="email" name="email" placeholder="Deine E-Mail" required>
-      <textarea name="message" placeholder="Deine Nachricht" required></textarea>
-      <button type="submit" class="cta-button">Absenden</button>
-    </form>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2024 Die Töchter der Mutter | Alle Rechte vorbehalten</p>
-    <p><a href="privacy.html">Datenschutz</a> | <a href="terms.html">Impressum</a></p>
-  </footer>
-
-  <script src="scripts.js"></script>
+        // Scrollbasierte Navigation
+        window.addEventListener('scroll', () => {
+            const nav = document.querySelector('.nav-wrapper');
+            window.scrollY > 100 
+                ? nav.style.backgroundColor = 'rgba(26, 26, 26, 0.9)'
+                : nav.style.backgroundColor = 'transparent';
+        });
+    </script>
 </body>
 </html>
