--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Livia Stockmaier - Künstlerische Visionen</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Livia Stockmaier - Kunst</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
         :root {
-            --primary-color: #f4e9d3;
-            --accent-color: #a63c3c;
-            --dark-bg: #1a1a1a;
+            --primary-white: #f8f9fa;
+            --accent-gold: #c6a769;
         }
 
         * {
@@ -19,236 +19,232 @@
         }
 
         body {
-            font-family: 'Raleway', sans-serif;
-            background-color: var(--dark-bg);
-            color: var(--primary-color);
+            font-family: 'Inter', sans-serif;
+            background: var(--primary-white);
+            color: #333;
             overflow-x: hidden;
         }
 
-        /* Navigation */
-        .nav-wrapper {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            padding: 1.5rem 5%;
-            mix-blend-mode: difference;
-        }
-
-        .main-nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.1rem;
-            position: relative;
-            transition: 0.3s;
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: var(--accent-color);
-            transition: 0.3s;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
-        }
-
-        /* Hero Section */
         .hero {
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
-            overflow: hidden;
         }
 
-        .hero-content {
-            text-align: center;
-            z-index: 1;
-        }
-
-        .hero h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 5rem;
-            margin-bottom: 1rem;
-            opacity: 0;
-            transform: translateY(30px);
-            animation: fadeInUp 1s forwards;
-        }
-
-        /* Gallery Grid */
-        .gallery-grid {
+        .dynamic-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1rem;
-            padding: 5%;
-            position: relative;
+            gap: 2rem;
+            padding: 4vw;
+            transition: 0.6s all cubic-bezier(0.23, 1, 0.32, 1);
         }
 
-        .gallery-item {
+        .art-card {
             position: relative;
+            border-radius: 16px;
             overflow: hidden;
-            border-radius: 8px;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.05);
+            transition: transform 0.4s, box-shadow 0.4s;
             cursor: pointer;
-            transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
         }
 
-        .gallery-item img {
+        .art-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 12px 40px rgba(0,0,0,0.1);
+        }
+
+        .art-card img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+            transition: transform 0.6s cubic-bezier(0.23, 1, 0.32, 1);
         }
 
-        .gallery-item:hover {
-            transform: scale(1.03);
+        ::-webkit-scrollbar {
+            width: 8px;
+            background: var(--primary-white);
         }
 
-        /* Dynamic Overlay Effect */
-        .gallery-item::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg, rgba(166, 60, 60, 0.3), transparent);
-            opacity: 0;
-            transition: 0.5s;
+        ::-webkit-scrollbar-thumb {
+            background: var(--accent-gold);
+            border-radius: 4px;
         }
 
-        .gallery-item:hover::after {
-            opacity: 1;
-        }
-
-        /* Animations */
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Section Styling */
-        section {
-            padding: 8rem 5%;
-            min-height: 100vh;
+        .story-section {
+            height: 100vh;
             display: flex;
             align-items: center;
+            scroll-snap-type: x mandatory;
+            overflow-x: scroll;
         }
 
-        /* Parallax Scrolling Effect */
-        .parallax-bg {
-            position: absolute;
-            width: 110%;
-            height: 110%;
-            top: -5%;
-            left: -5%;
-            background-size: cover;
-            background-position: center;
-            will-change: transform;
+        .story-panel {
+            min-width: 100vw;
+            height: 100vh;
+            scroll-snap-align: start;
+            padding: 4rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        /* Mobile Optimization */
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 3rem;
-            }
+        .modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(255,255,255,0.98);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+        }
 
-            .gallery-grid {
-                grid-template-columns: 1fr;
-            }
+        .swiper {
+            width: 80%;
+            height: 80%;
+        }
 
-            .nav-links {
-                display: none;
-            }
+        .swiper-slide {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .swiper-slide img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
         }
     </style>
 </head>
 <body>
-    <nav class="nav-wrapper">
-        <div class="main-nav">
-            <h1>LIVIASART</h1>
-            <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#gallery">Gallery</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </div>
+    <nav class="floating-nav">
+        <a href="#home">LIVIA STOCKMAIER</a>
+        <div class="nav-links">
+            <a href="#gallery">Werke</a>
+            <a href="#story">Irrlicht</a>
+            <a href="#contact">Kontakt</a>
         </div>
     </nav>
 
-    <section id="home" class="hero">
-        <div class="parallax-bg"></div>
-        <div class="hero-content">
-            <h1>Livia Stockmaier</h1>
-            <p>Contemporary Art & Visionary Creations</p>
-        </div>
-    </section>
+    <main>
+        <section class="dynamic-grid" id="gallery">
+            <!-- Bilder werden per JavaScript eingefügt -->
+        </section>
 
-    <section id="gallery">
-        <div class="gallery-grid">
-            <!-- Platzhalter für 9 Bilder -->
-            <div class="gallery-item"><img src="https://source.unsplash.com/random/600x800?art1" alt="Artwork 1"></div>
-            <div class="gallery-item"><img src="https://source.unsplash.com/random/600x800?art2" alt="Artwork 2"></div>
-            <div class="gallery-item"><img src="https://source.unsplash.com/random/600x800?art3" alt="Artwork 3"></div>
-            <!-- Weitere Items hier einfügen -->
-        </div>
-    </section>
+        <section class="story-section" id="story">
+            <div class="story-panel">
+                <img src="images/IMG_1160.jpg" alt="Irrlicht Geschichte Teil 1">
+            </div>
+            <div class="story-panel">
+                <img src="images/IMG_1161.jpg" alt="Irrlicht Geschichte Teil 2">
+            </div>
+            <div class="story-panel">
+                <img src="images/IMG_1162.jpg" alt="Irrlicht Geschichte Finale">
+            </div>
+        </section>
+    </main>
 
+    <div class="modal">
+        <div class="swiper">
+            <div class="swiper-wrapper"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
-        // Parallax Effect
-        document.addEventListener('mousemove', (e) => {
-            const parallax = document.querySelector('.parallax-bg');
-            const speed = 0.02;
-            const x = (window.innerWidth - e.pageX * speed) / 100;
-            const y = (window.innerHeight - e.pageY * speed) / 100;
-            parallax.style.transform = `translate(${x}px, ${y}px)`;
-        });
+        const artworks = [
+            { 
+                category: 'stoffe',
+                images: ['images/IMG_1153.jpg', 'images/IMG_1154.jpg']
+            },
+            {
+                category: 'oelbilder',
+                images: [
+                    'images/IMG_1163.jpg',
+                    'images/IMG_1164.jpg',
+                    'images/IMG_1165.jpg',
+                    'images/IMG_1166.jpg'
+                ]
+            },
+            {
+                category: 'tickets',
+                images: ['images/IMG_1155.jpg', 'images/IMG_1156.jpg']
+            },
+            {
+                category: 'portraits',
+                images: [
+                    'images/IMG_1157.jpg',
+                    'images/IMG_1158.jpg',
+                    'images/IMG_1159.jpg'
+                ]
+            }
+        ];
 
-        // Smooth Scroll
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
+        const grid = document.querySelector('.dynamic-grid');
+        artworks.forEach(category => {
+            category.images.forEach(img => {
+                const card = document.createElement('div');
+                card.className = 'art-card';
+                card.innerHTML = `
+                    <img src="${img}" alt="${category.category}">
+                `;
+                card.addEventListener('click', () => openModal(category.images, img));
+                grid.appendChild(card);
             });
         });
 
-        // Intersection Observer für Animationen
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = 1;
-                    entry.target.style.transform = 'translateY(0)';
-                }
+        let swiper;
+        function openModal(images, current) {
+            const modal = document.querySelector('.modal');
+            const wrapper = modal.querySelector('.swiper-wrapper');
+            wrapper.innerHTML = '';
+            
+            images.forEach(img => {
+                wrapper.innerHTML += `
+                    <div class="swiper-slide">
+                        <img src="${img}" alt="Kunstwerk">
+                    </div>
+                `;
             });
+
+            modal.style.display = 'flex';
+            swiper = new Swiper('.swiper', {
+                initialSlide: images.indexOf(current),
+                navigation: {
+                    nextEl: '.swiper-button-next',
+                    prevEl: '.swiper-button-prev',
+                },
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                },
+            });
+        }
+
+        document.querySelector('.modal').addEventListener('click', (e) => {
+            if(e.target === e.currentTarget) {
+                e.currentTarget.style.display = 'none';
+            }
         });
 
-        // Scrollbasierte Navigation
-        window.addEventListener('scroll', () => {
-            const nav = document.querySelector('.nav-wrapper');
-            window.scrollY > 100 
-                ? nav.style.backgroundColor = 'rgba(26, 26, 26, 0.9)'
-                : nav.style.backgroundColor = 'transparent';
+        gsap.from('.art-card', {
+            scrollTrigger: {
+                trigger: '.dynamic-grid',
+                start: 'top 80%',
+            },
+            opacity: 0,
+            y: 50,
+            stagger: 0.1,
+            duration: 1.2
         });
     </script>
 </body>
