--- a/index.html
+++ b/index.html
@@ -6,121 +6,7 @@
     <title>Livia Stockmaier - Kunst</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <style>
-        :root {
-            --primary-white: #f8f9fa;
-            --accent-gold: #c6a769;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: var(--primary-white);
-            color: #333;
-            overflow-x: hidden;
-        }
-
-        .hero {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-        }
-
-        .dynamic-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            padding: 4vw;
-            transition: 0.6s all cubic-bezier(0.23, 1, 0.32, 1);
-        }
-
-        .art-card {
-            position: relative;
-            border-radius: 16px;
-            overflow: hidden;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.05);
-            transition: transform 0.4s, box-shadow 0.4s;
-            cursor: pointer;
-        }
-
-        .art-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 40px rgba(0,0,0,0.1);
-        }
-
-        .art-card img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-        }
-
-        /* Custom Scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-            background: var(--primary-white);
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: var(--accent-gold);
-            border-radius: 4px;
-        }
-
-        .story-section {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            scroll-snap-type: x mandatory;
-            overflow-x: scroll;
-        }
-
-        .story-panel {
-            min-width: 100vw;
-            height: 100vh;
-            scroll-snap-align: start;
-            padding: 4rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: rgba(255,255,255,0.98);
-            display: none;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-        }
-
-        .swiper {
-            width: 80%;
-            height: 80%;
-        }
-
-        .swiper-slide {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .swiper-slide img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="floating-nav">
@@ -134,7 +20,7 @@
 
     <main>
         <section class="dynamic-grid" id="gallery">
-            <!-- Wird durch JavaScript generiert -->
+            <!-- Generiert durch JavaScript -->
         </section>
 
         <section class="story-section" id="story">
@@ -157,6 +43,18 @@
                 </picture>
             </div>
         </section>
+
+        <section id="contact" class="contact-section">
+            <h2>Kontakt</h2>
+            <div class="contact-content">
+                <p>Für Anfragen und Kommissionen:</p>
+                <a href="mailto:info@liviasart.de">info@liviasart.de</a>
+                <div class="social-links">
+                    <a href="#" target="_blank">Instagram</a>
+                    <a href="#" target="_blank">LinkedIn</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="modal">
@@ -170,109 +68,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script>
-        // Bilderdaten
-        const artworks = [
-            { 
-                category: 'stoffe',
-                images: [
-                    { webp: 'images/IMG_1153.webp', jpg: 'images/IMG_1153.jpg' },
-                    { webp: 'images/IMG_1154.webp', jpg: 'images/IMG_1154.jpg' }
-                ]
-            },
-            {
-                category: 'oelbilder',
-                images: [
-                    { webp: 'images/IMG_1163.webp', jpg: 'images/IMG_1163.jpg' },
-                    { webp: 'images/IMG_1164.webp', jpg: 'images/IMG_1164.jpg' },
-                    { webp: 'images/IMG_1165.webp', jpg: 'images/IMG_1165.jpg' },
-                    { webp: 'images/IMG_1166.webp', jpg: 'images/IMG_1166.jpg' }
-                ]
-            },
-            {
-                category: 'tickets',
-                images: [
-                    { webp: 'images/IMG_1155.webp', jpg: 'images/IMG_1155.jpg' },
-                    { webp: 'images/IMG_1156.webp', jpg: 'images/IMG_1156.jpg' }
-                ]
-            },
-            {
-                category: 'portraits',
-                images: [
-                    { webp: 'images/IMG_1157.webp', jpg: 'images/IMG_1157.jpg' },
-                    { webp: 'images/IMG_1158.webp', jpg: 'images/IMG_1158.jpg' },
-                    { webp: 'images/IMG_1159.webp', jpg: 'images/IMG_1159.jpg' }
-                ]
-            }
-        ];
-
-        // Galerie generieren
-        const grid = document.querySelector('.dynamic-grid');
-        artworks.forEach(category => {
-            category.images.forEach(img => {
-                const card = document.createElement('div');
-                card.className = 'art-card';
-                card.innerHTML = `
-                    <picture>
-                        <source srcset="${img.webp}" type="image/webp">
-                        <img src="${img.jpg}" alt="${category.category}" loading="lazy">
-                    </picture>
-                `;
-                card.addEventListener('click', () => openModal(category.images, img));
-                grid.appendChild(card);
-            });
-        });
-
-        // Modal mit Swiper
-        let swiper;
-        function openModal(images, current) {
-            const modal = document.querySelector('.modal');
-            const wrapper = modal.querySelector('.swiper-wrapper');
-            wrapper.innerHTML = '';
-            
-            images.forEach(img => {
-                wrapper.innerHTML += `
-                    <div class="swiper-slide">
-                        <picture>
-                            <source srcset="${img.webp}" type="image/webp">
-                            <img src="${img.jpg}" alt="Kunstwerk">
-                        </picture>
-                    </div>
-                `;
-            });
-
-            modal.style.display = 'flex';
-            swiper = new Swiper('.swiper', {
-                initialSlide: images.indexOf(current),
-                navigation: {
-                    nextEl: '.swiper-button-next',
-                    prevEl: '.swiper-button-prev',
-                },
-                pagination: {
-                    el: '.swiper-pagination',
-                    clickable: true,
-                },
-            });
-        }
-
-        // Schließen des Modals
-        document.querySelector('.modal').addEventListener('click', (e) => {
-            if(e.target === e.currentTarget) {
-                e.currentTarget.style.display = 'none';
-            }
-        });
-
-        // Scroll-Animationen
-        gsap.from('.art-card', {
-            scrollTrigger: {
-                trigger: '.dynamic-grid',
-                start: 'top 80%',
-            },
-            opacity: 0,
-            y: 50,
-            stagger: 0.1,
-            duration: 1.2
-        });
-    </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
